--- a/styles/Locuscare/Locuscare.css
+++ b/styles/Locuscare/Locuscare.css
@@ -1083,6 +1083,10 @@ svg {
   position: relative;
 }
 
+.quickmobile {
+  display: none;
+}
+
 @media only screen and (max-width: 1442px) {
   .section_2 {
     margin-left: 0px !important;
@@ -1148,8 +1152,29 @@ svg {
     overflow-x: hidden !important;
     width: 100% !important;
   }
+  .first_se {
+    padding: 0px 38px;
+  }
   .section_2 {
-    margin-left: -15px !important;
+    margin-left: 0px !important;
+  }
+  .quickweb {
+    display: none;
+  }
+  .quickmobile {
+    display: block;
+    margin-top: 20px !important;
+  }
+  .phone_1 {
+    position: relative;
+    left: 0px;
+    width: 100%;
+  }
+  .phone_2 {
+    position: relative;
+    right: 10px !important;
+    width: 100%;
+    margin-top: 10px !important;
   }
   .colomn_div .icon_1 {
     margin-top: 0px;
@@ -1180,7 +1205,7 @@ svg {
     background-color: white;
     border-radius: 50px;
     position: absolute;
-    left: 0px;
+    left: 10px !important;
     height: 50px;
     text-align: center;
     width: 50px;
@@ -1208,7 +1233,7 @@ svg {
     letter-spacing: 0.3px;
     color: #767A82;
     opacity: 2;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
   }
   .head_details1 .para_row {
@@ -1223,7 +1248,7 @@ svg {
     letter-spacing: 0.3px;
     color: #767A82;
     opacity: 2;
-    font-size: 19px;
+    font-size: 16px;
     font-weight: 400;
     opacity: 0.9;
     padding-top: 0% !important;
@@ -1247,7 +1272,7 @@ svg {
     letter-spacing: 0.3px;
     color: #767A82;
     opacity: 2;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
     opacity: 0.9;
     padding-left: 0%;
@@ -1269,7 +1294,7 @@ svg {
     letter-spacing: 0.4px;
     color: #FFFFFF;
     opacity: 2;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
     opacity: 0.7;
   }
@@ -1292,14 +1317,14 @@ svg {
   .notification1 {
     margin-top: 5% !important;
     padding: 2%;
-    font-size: 18px !important;
+    font-size: 16px !important;
   }
   .notification_content {
     font-family: "fontLatoRegular";
     letter-spacing: 0.3px;
     color: #767A82;
     opacity: 2;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
     opacity: 0.9;
     padding-top: 0%;
@@ -1318,7 +1343,7 @@ svg {
     letter-spacing: 0.3px;
     color: #767A82;
     opacity: 2;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
     opacity: 0.9;
     padding-left: 3%;
@@ -1340,7 +1365,7 @@ svg {
     color: #222C5D;
     opacity: 1;
   }
-  .quick {
+  .quickweb {
     margin-top: 10% !important;
   }
   .fa_icon {
@@ -1389,10 +1414,14 @@ svg {
     letter-spacing: 0.3px;
     color: #FFFFFF;
     opacity: 2;
-    font-size: 17px !important;
+    font-size: 16px !important;
     font-weight: 400;
     opacity: 0.7;
   }
+}
+
+.qr_code {
+  height: 500px !important;
 }
 
 @media only screen and (max-width: 378px) {
