--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -184,9 +184,7 @@ body{
     height: 2px;
 }
  
-.scroll_styles::-webkit-scrollbar-track {
-    // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-}
+
  
 .scroll_styles::-webkit-scrollbar-thumb {
 //   background-color: darkgrey;
@@ -364,7 +362,7 @@ body{
     z-index: 2;
     top: 0;
     right: 0;
-	float: right;
+	// float: right;
 	/* Simply change property to float left to switch icon side :) */
 	height: 60px;
 	width: 55px;
@@ -666,8 +664,8 @@ svg{
         width: 100%;
         color: black;
         display: block;
-        padding: 0px 0px;
-        font-size: 4px;
+        padding: 10px 18px;
+        font-size: 16px;
         border-bottom: 1px solid #6c757d1f;
         text-align: left;
        
@@ -1082,11 +1080,7 @@ body{
                 padding: 14px 25px;
                 cursor: pointer;
             }
-            .tap{
-                // &:hover{
-                //     color: #665cd7;
-                // }
-            }
+           
             .active_sale{
                 color: #fff;
                 border-radius: 6px;
@@ -1241,15 +1235,9 @@ body{
             .Oval_code{
                 box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
                 border: solid 1px rgba(51, 74, 192, 0.15);
-                img {
-                    // width: 31px;
-                    // height: 39px;
-                }
+              
             }
-            .Oval_pro{
-                // box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.17);
-                // border: solid 1px rgba(22, 161, 177, 0.22);
-            }
+           
             .Oval_flash{
                 // box-shadow: 0 3px 1px 0 rgba(141, 99, 29, 0.1);
                 // border: solid 1px #e9dcc7;
@@ -1258,14 +1246,8 @@ body{
                     height: 33px;
                 }
             }
-            .Oval_crown{
-                // box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
-                // border: solid 1px #d4e4e6;
-            }
-            .Oval_group_join{
-                // box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.17);
-                // border: solid 1px #dddfec;
-            }
+            
+           
             .card-text{
                 color: $text-tertiary-color;
                 font-size: 18px;
@@ -2569,12 +2551,7 @@ body{
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     .header_mobile{
         display: block !important;
-        .logo_mobile{
-            img{
-                // width: 120px;
-            }
-        }
-    }
+      
     .header{
         display: none;
         position: fixed;
@@ -2588,10 +2565,7 @@ body{
     .sign_btn {
         display: none !important;
     }
-    .video_player{
-        // height: 50vh;
-        // margin-bottom: 60vh;
-    }
+   
     .whe_we_are_video_player{
         top: 60px !important;
     }
@@ -3127,12 +3101,8 @@ body{
 }
 // Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-    .header_menu {
-        // display: none !important;
-    }
-    .sign_btn {
-        // display: none !important;
-    }
+  
+   
 }
 @media only screen and (max-width: 768px) {
     .header_text{
@@ -3181,10 +3151,7 @@ body{
   .sign_btn {
       display: none !important;
   }
-  .first_section{
-    //   height: calc(100vh - 85px);
-    //   height: 100% !important;
-  }
+  
   .whe_we_are_video_player{
       top: 60px !important;
   }
@@ -4103,4 +4070,5 @@ h4 {
         
      
     }
+}
 }
