worked on changes in case study pages

--- a/styles/Locuscare/Locuscare.css
+++ b/styles/Locuscare/Locuscare.css
@@ -1097,7 +1097,7 @@ svg {
   }
 }
 
-@media only screen and (max-width: 1025px) {
+@media only screen and (max-width: 1030px) {
   .section_2 {
     margin-left: 2px !important;
   }
@@ -1110,7 +1110,7 @@ svg {
     bottom: 23px;
   }
   .recep_1 {
-    bottom: 0px;
+    bottom: -30px !important;
     margin-top: 78px;
   }
   .web_launch {
