--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -1187,7 +1187,7 @@ display:none;
         height: 600px !important;
     }
 }
-  @media only screen and (max-width: 1025px) {
+  @media only screen and (max-width: 1030px) {
     .section_2
     {
         margin-left: 2px !important;
@@ -1204,7 +1204,7 @@ display:none;
         }
     
     .recep_1 {
-        bottom: 0px;
+        bottom: -30px !important;
         margin-top: 78px;
     }
     .web_launch {
