--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -708,7 +708,7 @@ svg {
     top             : 50px;
     z-index         : 13;
     left            : -25px;
-    width           : 130px;
+    width           : 140px;
 
     border-radius: 4px;
     box-shadow   : 0px 2px 7px 0px rgba(51, 74, 192, 0.12);
@@ -718,7 +718,7 @@ svg {
         width  : 100%;
         color  : black;
         display: block;
-        padding: 10px 24px;
+        padding: 10px 20px;
 
         border-bottom: 1px solid #6c757d1f;
         text-align   : left;
@@ -733,7 +733,7 @@ svg {
         width  : 100%;
         color  : black;
         display: block;
-        padding: 10px 25px;
+        padding: 10px 20px;
 
         border-bottom: 1px solid #6c757d1f;
         text-align   : left;
@@ -956,7 +956,7 @@ svg {
         letter-spacing: 0.3px;
         color         : #FFFFFF;
         opacity       : 2;
-        font-size     : 21px;
+        font-size     : 18px;
         font-weight   : 400;
         opacity       : 0.7;
 
@@ -982,7 +982,7 @@ svg {
         letter-spacing: 0.3px;
         color         : #FFFFFF;
         opacity       : 2;
-        font-size     : 19px;
+        font-size     : 18px;
         font-weight   : 400;
         opacity       : 0.7;
        
@@ -1004,7 +1004,7 @@ svg {
     letter-spacing: 0.3px;
     color         : #767A82;
     opacity       : 2;
-    font-size     : 19px;
+    font-size     : 18px;
     font-weight   : 400;
     opacity       : 0.9; 
     padding-left: 20%;
@@ -1023,7 +1023,7 @@ svg {
 }
 .achieved_title
 {
-    font-size     : 20px;
+    font-size     : 18px;
     letter-spacing: 0px;
     color         :#212529;
     opacity       : 1;
@@ -1036,7 +1036,7 @@ svg {
     letter-spacing: 0.3px;
     color         : #767A82;
     opacity       : 2;
-    font-size     : 19px;
+    font-size     : 18px;
     font-weight   : 400;
     opacity       : 0.9; 
    
@@ -1049,7 +1049,7 @@ svg {
     letter-spacing: 0.3px;
     color         : #767A82;
     opacity       : 2;
-    font-size     : 19px;
+    font-size     : 18px;
     font-weight   : 400;
     opacity       : 0.9; 
     padding-left: 25%;
@@ -1063,7 +1063,7 @@ svg {
     letter-spacing: 0.3px;
     color         : #767A82;
     opacity       : 2;
-    font-size     : 19px;
+    font-size     : 18px;
     font-weight   : 400;
     opacity       : 0.9; 
    
@@ -1088,7 +1088,7 @@ svg {
         letter-spacing: 0.3px;
         color         : #767A82;
         opacity       : 2;
-        font-size     : 21px;
+        font-size     : 18px;
         font-weight   : 400;
         opacity       : 0.9; 
     }
@@ -1113,7 +1113,7 @@ svg {
   margin:6px 0px;
   color:#fff;
   padding:20px;
-  font-size: 17px;
+  font-size: 18px;
   }
   .card1{
   left:40%;
@@ -1188,6 +1188,9 @@ display:none;
     }
 }
   @media only screen and (max-width: 1030px) {
+    .family{
+        margin-top:200px !important;
+    }
     .section_2
     {
         margin-left: 2px !important;
@@ -1203,6 +1206,7 @@ display:none;
             bottom: 23px;
         }
     
+       
     .recep_1 {
         bottom: -30px !important;
         margin-top: 78px;
