worked on the changes

--- a/styles/csk/csk.scss
+++ b/styles/csk/csk.scss
@@ -773,7 +773,7 @@ padding:15px 0px 10px 3px;
 }
 .understanding_title {
   color: #0066b3;
-  text-align: left;
+  text-align: center !important;
   font-size: 35px;
   font-weight: bold;
   padding: 0px 0px;
