--- a/styles/csk/csk.css
+++ b/styles/csk/csk.css
@@ -776,7 +776,7 @@
   }
   .understanding_title {
     color: #0066b3;
-    text-align: left;
+    text-align: center !important;
     font-size: 35px;
     font-weight: bold;
     padding: 0px 0px;
