--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -922,7 +922,7 @@ svg {
         letter-spacing: 0.3px;
         color         : #767A82;
         opacity       : 2;
-        font-size     : 20px;
+        font-size     : 18px;
         font-weight   : 400;
 
     }
@@ -1181,7 +1181,7 @@ display:none;
     .section_2
     {
         margin-left:0px !important;
-        padding: 0px 20px !important;
+        padding: 0px 65px !important;
     }
     .web_launch {
         height: 600px !important;
@@ -1194,6 +1194,7 @@ display:none;
     .section_2
     {
         margin-left: 2px !important;
+        padding: 0px 20px !important;
     }
     .first_se
     {
@@ -1244,6 +1245,9 @@ display:none;
     {
         display: none !important;
     }
+    .first_se {
+        padding: 0px 24px;
+    } 
 }
 
 @media only screen and (max-width: 426px) {
