--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1537,17 +1537,33 @@ body {
 }
 
 .footer .row .menu_list {
-  text-align: center;
+  text-align: left;
+  margin: 0px;
+}
+
+.footer .row .menu_types {
+  margin-top: 20px;
 }
 
 .footer .row .footer_menu {
   cursor: pointer;
   margin: 0;
-  font-size: 16px;
+  font-size: 18px;
   color: #43434b;
 }
 
 .footer .row .footer_menu:hover {
+  color: #000;
+}
+
+.footer .row .footer_menu_1 {
+  cursor: pointer;
+  margin: 0;
+  font-size: 14px;
+  color: #43434b;
+}
+
+.footer .row .footer_menu_1:hover {
   color: #000;
 }
 
