--- a/styles/Saas_metric/Saas_metric.css
+++ b/styles/Saas_metric/Saas_metric.css
@@ -450,7 +450,7 @@ body {
   padding: 3px 4px;
   position: absolute;
   top: 0px;
-  width: 35px;
+  width: 69px;
   height: 17px;
   border-radius: 3px;
   background-color: #16cebc;
@@ -565,12 +565,12 @@ body {
 
 .header .row .header_menu span tag {
   font-size: 10px;
-  padding: 3px 4px;
+  padding: 4px 6px;
   position: absolute;
-  right: -10px;
-  top: 4px;
-  width: 35px;
-  height: 17px;
+  right: -20px;
+  top: 0px;
+  width: 69px;
+  height: 19px;
   border-radius: 3px;
   background-color: #16cebc;
   line-height: 1.1;
@@ -677,6 +677,21 @@ svg {
 }
 
 .dropdown #blog:hover {
+  color: #665CD7;
+}
+
+.dropdown #saasmetrics {
+  margin: 0;
+  width: 100%;
+  color: black;
+  display: block;
+  padding: 10px 20px;
+  font-size: 15px;
+  border-bottom: 1px solid #6c757d1f;
+  text-align: left;
+}
+
+.dropdown .dropdown #saasmetrics:hover {
   color: #665CD7;
 }
 
