--- a/styles/customer_retention/customer.css
+++ b/styles/customer_retention/customer.css
@@ -60,6 +60,62 @@ p {
   display: block;
 }
 
+.dropdown {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  top: 50px;
+  z-index: 13;
+  left: -25px;
+  width: 140px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 2px 7px 0px rgba(51, 74, 192, 0.12);
+          box-shadow: 0px 2px 7px 0px rgba(51, 74, 192, 0.12);
+}
+
+.dropdown #glossary {
+  margin: 0;
+  width: 100%;
+  color: black !important;
+  display: block;
+  padding: 10px 20px;
+  border-bottom: 1px solid #6c757d1f;
+  text-align: left;
+}
+
+.dropdown #glossary:hover {
+  color: #665CD7;
+}
+
+.dropdown #blog {
+  margin: 0;
+  width: 100%;
+  color: black !important;
+  display: block;
+  padding: 10px 20px;
+  border-bottom: 1px solid #6c757d1f;
+  text-align: left;
+}
+
+.dropdown #blog:hover {
+  color: #665CD7;
+}
+
+.dropdown #saasmetrics {
+  margin: 0;
+  width: 100%;
+  color: black !important;
+  display: block;
+  padding: 10px 20px;
+  font-size: 15px;
+  border-bottom: 1px solid #6c757d1f;
+  text-align: left;
+}
+
+.dropdown #saasmetrics:hover {
+  color: #665CD7;
+}
+
 .footer_social_media1 {
   display: block !important;
 }
