--- a/styles/csk/csk.scss
+++ b/styles/csk/csk.scss
@@ -90,6 +90,11 @@
       
     text-align: left;
   }
+  
+body{
+  overflow-x: hidden !important;
+  // user-select: none;
+}
   .title_mobile
   {
     display:none;
