--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -477,6 +477,7 @@ body{
             margin: auto 0;
             img{
                 width: 120px;
+                height:100%;
             }
         }
     }
@@ -530,6 +531,7 @@ body{
             font-weight: bold;
             img {
                 width: 134px;
+               height:100%;
                 // height: 36px;
             }
         }   
