--- a/styles/styles.css
+++ b/styles/styles.css
@@ -683,6 +683,21 @@ svg {
   color: #665CD7;
 }
 
+.dropdown #casestudy {
+  margin: 0;
+  width: 100%;
+  color: black;
+  display: block;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-bottom: 1px solid #6c757d1f;
+  text-align: left;
+}
+
+.dropdown #casestudy:hover {
+  color: #665CD7;
+}
+
 .dropdown #saasmetrics {
   margin: 0;
   width: 100%;
