--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -649,7 +649,7 @@ svg{
             color: #665CD7;
         }
     }
-    #blog{
+    #blogs{
         margin: 0;
         width: 100%;
         color: black;
