worked on changes

--- a/styles/csk/csk.scss
+++ b/styles/csk/csk.scss
@@ -30,17 +30,17 @@
   
   @font-face {
     font-family: "fontLatoRegular";
-    src: url("../plugin/fonts/lato/Lato-Regular.ttf");
+    src: url("../../plugin/fonts/lato/Lato-Regular.ttf");
   }
   
   @font-face {
     font-family: "fontLatoBlack";
-    src: url("../plugin/fonts/lato/Lato-Black.ttf");
+    src: url("../../plugin/fonts/lato/Lato-Black.ttf");
   }
   
   @font-face {
     font-family: "fontLatoBold";
-    src: url("../plugin/fonts/lato/Lato-Bold.ttf");
+    src: url("../../plugin/fonts/lato/Lato-Bold.ttf");
   }
   
   .fontGraphikMedium {
