--- a/styles/managedcare/managedcare.css
+++ b/styles/managedcare/managedcare.css
@@ -1522,7 +1522,7 @@
 
 @media only screen and (max-width: 376px) {
   .managed_care_title_1 {
-    font-size: 33px;
+    font-size: 33px !important;
   }
 }
 
