--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -1619,7 +1619,7 @@ display: none;
 
     .managed_care_title_1
     {
-        font-size: 33px;
+        font-size: 33px !important;
     }
 }
 @media only screen and (max-width: 325px) {
