--- a/styles/managedcare/managedcare.css
+++ b/styles/managedcare/managedcare.css
@@ -1523,6 +1523,7 @@
 @media only screen and (max-width: 376px) {
   .managed_care_title_1 {
     font-size: 33px !important;
+    font-family: "fontGraphikSemibold";
   }
 }
 
