--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -1620,6 +1620,7 @@ display: none;
     .managed_care_title_1
     {
         font-size: 33px !important;
+        font-family: "fontGraphikSemibold";
     }
 }
 @media only screen and (max-width: 325px) {
