--- a/styles/managedcare/managedcare.css
+++ b/styles/managedcare/managedcare.css
@@ -1523,7 +1523,10 @@
 @media only screen and (max-width: 376px) {
   .managed_care_title_1 {
     font-size: 33px !important;
-    font-family: "fontGraphikSemibold";
+    font-family: "fontGraphikSemibold" !important;
+    letter-spacing: 0px !important;
+    color: #363A57;
+    opacity: 1;
   }
 }
 
