--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -1617,7 +1617,7 @@ display: none;
 }
 @media only screen and (max-width: 376px) {
 
-    .managed_care_title_1
+    .quick_onboard_1.index_head_1 .title_web.managed_care_title_1
     {
         font-size: 33px !important;
         font-family: "fontGraphikSemibold" !important;
