--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -958,7 +958,7 @@
 @media only screen and (max-width: 427px) {
 
 
-    .index_head_1 .title_web .managed_care_title {
+    .index_head_1 .title_web .managed_care_title_1 {
         letter-spacing: 0px;
         color: #363A57;
         opacity: 1;
