--- a/styles/managedcare/managedcare.css
+++ b/styles/managedcare/managedcare.css
@@ -881,6 +881,9 @@
 }
 
 @media only screen and (max-width: 427px) {
+  .index_head_1 .title_web {
+    padding: 0px;
+  }
   .index_head_1 .title_web .managed_care_title_1 {
     letter-spacing: 0px;
     color: #363A57;
