--- a/styles/managedcare/managedcare.css
+++ b/styles/managedcare/managedcare.css
@@ -881,10 +881,10 @@
 }
 
 @media only screen and (max-width: 427px) {
-  .index_head_1 .title_web {
+  .index_head_1 .title_web_1 {
     padding: 0px;
   }
-  .index_head_1 .title_web .managed_care_title_1 {
+  .index_head_1 .title_web_1 .managed_care_title_1 {
     letter-spacing: 0px;
     color: #363A57;
     opacity: 1;
