--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -958,7 +958,7 @@
 @media only screen and (max-width: 427px) {
 
 
-    .quick_onboard_1.index_head_1 .title_web_1 
+    .index_head_1 .title_web_12
     
     {
         padding:0px;
