--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -961,7 +961,8 @@
     .index_head_1 .title_web_12
     
     {
-        padding:0px;
+        padding-left:0px;
+        padding-right:0px;
         
         .managed_care_title_1 {
         letter-spacing: 0px;
