--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -972,6 +972,17 @@
         font-family: "fontGraphikSemibold";
         padding: 0px;
     }
+    .Title_details_1 {
+        text-align: left;
+        margin-top: 30px;
+        letter-spacing: 0px;
+        color: #595959;
+        opacity: 1;
+        font-family: "fontLatoRegular";
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 2.1;
+    }
 }
     .index_head .title_web .platform_deliverables .deliverables {
         border-left: 3px solid #F27D35;
