--- a/styles/managedcare/managedcare.css
+++ b/styles/managedcare/managedcare.css
@@ -893,6 +893,17 @@
     font-family: "fontGraphikSemibold";
     padding: 0px;
   }
+  .index_head_1 .title_web_12 .Title_details_1 {
+    text-align: left;
+    margin-top: 30px;
+    letter-spacing: 0px;
+    color: #595959;
+    opacity: 1;
+    font-family: "fontLatoRegular";
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 2.1;
+  }
   .index_head .title_web .platform_deliverables .deliverables {
     border-left: 3px solid #F27D35;
     line-height: 27px;
