--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -989,6 +989,14 @@
     }
 }
     }
+    .administration .main_admin .admin_img {
+        padding-top: 41px !important;
+        background: url("/images/Ellipse 258.svg");
+        background-repeat: no-repeat;
+        background-position: 42% 10%;
+        height: 477px !important;
+        background-size: 371px !important;
+    }
     .index_head .title_web .platform_deliverables .deliverables {
         border-left: 3px solid #F27D35;
         line-height: 27px;
