--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -957,7 +957,25 @@
 
 @media only screen and (max-width: 427px) {
 
+    .index_head_1 
+    {
+        margin-top:50px ;
 
+    .title_web_1
+    {
+        padding-left:0px;
+        padding-right:0px;
+        
+        .managed_care_title_1 {
+        letter-spacing: 0px;
+        color: #363A57;
+        opacity: 1;
+        font-size: 33px;
+        font-family: "fontGraphikSemibold";
+        padding: 0px;
+    }
+}
+    }
     .index_head_1 
     {
         margin-top:50px ;
