--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -1567,6 +1567,14 @@ display:none;
 }
 .qr_code {
     height:500px !important;
+   
+        background: #2B2756;
+    padding: 30px 30px 30px 30px;
+    border-radius: 40px;
+    width: 100%;
+    margin-left: 0px;
+   
+  
 }
 
 @media only screen and (max-width: 378px) {
