--- a/styles/Locuscare/Locuscare.css
+++ b/styles/Locuscare/Locuscare.css
@@ -1433,6 +1433,11 @@ svg {
 
 .qr_code {
   height: 500px !important;
+  background: #2B2756;
+  padding: 30px 30px 30px 30px;
+  border-radius: 40px;
+  width: 100%;
+  margin-left: 0px;
 }
 
 @media only screen and (max-width: 378px) {
