--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -1569,7 +1569,7 @@ display:none;
     height:500px !important;
    
         background: #2B2756;
-    padding: 30px 30px 30px 30px;
+    padding: 30px 30px 30px 30px !important;
     border-radius: 40px;
     width: 100%;
     margin-left: 0px;
