--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -1623,4 +1623,12 @@ display:none;
     .sub3 {
         padding-left: 26% !important;
     }
+    .dot_li
+    {
+        padding:10px !important;
+    }
+    .dot_des
+    {
+        font-size:14px !important;
+    }
 }
